--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (http://username.github.io) then use these settings:
-url: "http://data1010.github.io"
+url: "http://data1050.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: DATA 1010
+title: DATA 1050
 
 # Short description of your site
-description: Probability, Statistics, and Machine Learning
+description: Data Engineering
 
 # --- Navigation bar options --- #
 
@@ -30,9 +30,7 @@ navbar-links:
     - Data Gymnasia: "https://mathigon.org/data-gymnasia"
     - Python Data Science Handbook: "https://jakevdp.github.io/PythonDataScienceHandbook/"
     - Julia-Python-R cheatsheet: "docs/cheatsheets/jpr-cheatsheet.pdf"
-    - Plots.jl cheatsheet: "docs/cheatsheets/plotsjl-cheatsheet.pdf"
-    - Preliminaries cheatsheet: "docs/cheatsheets/prelim-cheatsheet.pdf"
-
+    
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the #navbar
 # avatar: "/img/dsi-logo.png"
@@ -46,7 +44,7 @@ title-img: "/img/dsi-logo.png"
 # By default, the navigation bar and footer have a light gray background, and the main page
 # has a white background. You can specify a different background colour or a background image
 # for the navigation bar, the main page, and the footer.
-navbar-col: "#c68c53"
+navbar-col: "#52b3e2"
 # navbar-img: "/img/bgimage.png"
 # footer-col: "blue"
 # footer-img: "/img/bgimage.png"
