--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,8 @@ navbar-links:
   Home: "index"
   Class: "class"
   Resources:
-    - Data Gymnasia: "https://mathigon.org/data-gymnasia"
+    - Prismia Course Library: "https://prismia.chat/#course-library"
+    - Course Cheatsheet: "docs/cheatsheets/DATA_1050_Cheatsheet.pdf"
     - Python Data Science Handbook: "https://jakevdp.github.io/PythonDataScienceHandbook/"
     - Julia-Python-R cheatsheet: "docs/cheatsheets/jpr-cheatsheet.pdf"
 #    - Late Day Request Form: "https://docs.google.com/forms/d/e/1FAIpQLSdF5mv3AAo-TLWQCLRjRrMMKvL80Y1t7O9CmYqCkjkmv7CKrw/viewform"
